--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
     <ul>
-        <li><a href="./articles/a1.html"/>Article 1</li>
+        <li><a href="articles/a1.html"/>Article 1</li>
     </ul>
 </body>
 </html>
